Squashed commit of the following:
commit e40019a99b9e58f11af63deffef4f6c271916cb9
Author: Bill Burke <bburke@redhat.com>
Date:   Tue Jun 11 14:48:26 2019 -0400

    azure tests

commit 72b0309724df48fae93d5c9ecf2e02c91124653d
Author: Bill Burke <bburke@redhat.com>
Date:   Tue Jun 11 12:06:32 2019 -0400

    archetype

commit a799cc3e476ba1982d283efb70050f0c23271901
Merge: a4fcc8007 4852c9443
Author: Bill Burke <bburke@redhat.com>
Date:   Mon Jun 10 17:02:09 2019 -0400

    Merge remote-tracking branch 'upstream/master' into resteasy

commit a4fcc8007abfb55f52f519adcc2922fc3478d884
Author: Bill Burke <bburke@redhat.com>
Date:   Mon Jun 10 17:02:04 2019 -0400

    resteasy

--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -452,6 +452,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-azure-functions-resteasy-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-azure-functions-resteasy</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-resteasy-server-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
