--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -66,6 +66,7 @@
         <module>reactive-pg-client</module>
         <module>test-extension</module>
         <module>amazon-lambda</module>
+        <module>azure-functions-resteasy</module>
     </modules>
 
     <build>
