--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -241,6 +241,11 @@
                 <artifactId>quarkus-netty</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-netty-http</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Quarkus extensions -->
 
