--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -51,6 +51,7 @@
         <module>test-extension</module>
         <module>amazon-lambda</module>
         <module>kogito</module>
+        <module>netty</module>
     </modules>
 
     <build>
