--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -34,7 +34,7 @@
         <module>jpa-mssql</module>
         <module>hibernate-orm-panache</module>
         <module>hibernate-search-elasticsearch</module>
-        <module>vertx</module>
+        <!-- <module>vertx</module> -->
         <module>spring-di</module>
         <module>infinispan-cache-jpa</module>
         <module>elytron-security</module>
