--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -432,6 +432,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-azure-functions-http</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-resteasy</artifactId>
                 <version>${project.version}</version>
             </dependency>
